--- a/SCIL496_CSAT.ioc
+++ b/SCIL496_CSAT.ioc
@@ -19,18 +19,18 @@ CAD.provider=
 CAN1.AWUM=ENABLE
 CAN1.BS1=CAN_BS1_13TQ
 CAN1.BS2=CAN_BS2_2TQ
-CAN1.CalculateBaudRate=500000
-CAN1.CalculateTimeBit=2000
-CAN1.CalculateTimeQuantum=125.0
+CAN1.CalculateBaudRate=1000000
+CAN1.CalculateTimeBit=1000
+CAN1.CalculateTimeQuantum=62.5
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,AWUM,TXFP
 CAN1.Prescaler=2
 CAN1.TXFP=ENABLE
 CAN2.AWUM=ENABLE
 CAN2.BS1=CAN_BS1_13TQ
 CAN2.BS2=CAN_BS2_2TQ
-CAN2.CalculateBaudRate=500000
-CAN2.CalculateTimeBit=2000
-CAN2.CalculateTimeQuantum=125.0
+CAN2.CalculateBaudRate=1000000
+CAN2.CalculateTimeBit=1000
+CAN2.CalculateTimeQuantum=62.5
 CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler,AWUM,TXFP
 CAN2.Prescaler=2
 CAN2.TXFP=ENABLE
@@ -407,6 +407,7 @@ PE6.Signal=DCMI_D7
 PinOutPanel.RotationAngle=90
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -419,7 +420,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -436,59 +437,63 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_DCMI_Init-DCMI-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_RTC_Init-RTC-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true
-RCC.ADCFreq_Value=16000000
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB1TimFreq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.APB2TimFreq_Value=16000000
+RCC.ADCFreq_Value=64000000
+RCC.AHBFreq_Value=64000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=64000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=64000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
-RCC.CortexFreq_Value=16000000
-RCC.DFSDMFreq_Value=16000000
-RCC.FCLKCortexFreq_Value=16000000
+RCC.CortexFreq_Value=64000000
+RCC.DFSDMFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=64000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=16000000
+RCC.HCLKFreq_Value=64000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=16000000
-RCC.I2C2Freq_Value=16000000
-RCC.I2C3Freq_Value=16000000
-RCC.I2C4Freq_Value=16000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
-RCC.LPTIM1Freq_Value=16000000
-RCC.LPTIM2Freq_Value=16000000
-RCC.LPUART1Freq_Value=16000000
+RCC.I2C1Freq_Value=32000000
+RCC.I2C2Freq_Value=32000000
+RCC.I2C3Freq_Value=32000000
+RCC.I2C4Freq_Value=32000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.LPTIM1Freq_Value=32000000
+RCC.LPTIM2Freq_Value=32000000
+RCC.LPUART1Freq_Value=32000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=16000000
+RCC.MCO1PinFreq_Value=64000000
 RCC.MSI_VALUE=4000000
-RCC.PLLPoutputFreq_Value=16000000
-RCC.PLLQoutputFreq_Value=16000000
-RCC.PLLRCLKFreq_Value=16000000
-RCC.PLLSAI1PoutputFreq_Value=16000000
-RCC.PLLSAI1QoutputFreq_Value=16000000
-RCC.PLLSAI1RoutputFreq_Value=16000000
+RCC.PLLN=32
+RCC.PLLPoutputFreq_Value=64000000
+RCC.PLLQoutputFreq_Value=64000000
+RCC.PLLRCLKFreq_Value=64000000
+RCC.PLLSAI1N=32
+RCC.PLLSAI1PoutputFreq_Value=64000000
+RCC.PLLSAI1QoutputFreq_Value=64000000
+RCC.PLLSAI1RoutputFreq_Value=64000000
 RCC.PLLSAI2PoutputFreq_Value=16000000
 RCC.PLLSAI2RoutputFreq_Value=16000000
-RCC.PWRFreq_Value=16000000
+RCC.PWRFreq_Value=64000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=16000000
-RCC.SAI2Freq_Value=16000000
+RCC.SAI1Freq_Value=64000000
+RCC.SAI2Freq_Value=64000000
 RCC.SDMMCFreq_Value=48000000
-RCC.SWPMI1Freq_Value=16000000
-RCC.SYSCLKFreq_VALUE=16000000
+RCC.SWPMI1Freq_Value=32000000
+RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=16000000
-RCC.UART5Freq_Value=16000000
-RCC.USART1Freq_Value=16000000
-RCC.USART2Freq_Value=16000000
-RCC.USART3Freq_Value=16000000
+RCC.UART4Freq_Value=32000000
+RCC.UART5Freq_Value=32000000
+RCC.USART1Freq_Value=32000000
+RCC.USART2Freq_Value=32000000
+RCC.USART3Freq_Value=32000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=32000000
-RCC.VCOSAI1OutputFreq_Value=32000000
+RCC.VCOOutputFreq_Value=128000000
+RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=32000000
 SH.GPXTI11.0=GPIO_EXTI11
 SH.GPXTI11.ConfNb=1
